# morning-report

./: .env.example  .gitignore  QUICK_SUMMARY.md  README.md  pyproject.toml
config/: watchlist.json
data/reports/: morning_snapshot_2025-11-20.md
data/snapshots/: googlenews_snapshot_2025-11-20.json  macro_news_snapshot_2025-11-20.json  marketwatch_snapshot_2025-11-20.json  vital_knowledge_snapshot_2025-11-20.json  yahoo_snapshot_2025-11-20.json
src/core/: report_builder.py  stagehand_runner.py
src/core/cli/: __init__.py  run_morning_snapshot.py
src/skills/: __init__.py
src/skills/googlenews/: __init__.py  research.py
src/skills/marketwatch/: research.py
src/skills/vital_knowledge/: __init__.py  macro_news.py  research.py
src/skills/yahoo/: __init__.py  quote.py  research.py
